--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ test=pytest
 [coverage:run]
 branch = True
 source = tmc.common
+data_file = common_coverage
 
 [tool:pytest]
 testpaths = tests
@@ -11,6 +12,7 @@ addopts = --forked
           --verbose
           --json-report
           --json-report-file=htmlcov/report.json
+          --cov-branch
           --cov-report term
           --cov-report html
           --cov-report xml
@@ -18,3 +20,7 @@ addopts = --forked
           --junitxml=/build/reports/unit-tests.xml
 console_output_style = progress
 junit_family = legacy
+
+[metadata]
+description-file = README.rst
+
