AT1-706:check stage for pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,8 +52,8 @@ build wheel for development: # Executed on non-tagged commit
     - docker-executor
   script:
     - python3 setup.py egg_info -b+dev.$CI_COMMIT_SHORT_SHA sdist bdist_wheel
-  rules:
-    - if: '$CI_COMMIT_TAG == null || $CI_COMMIT_TAG == ""'
+  # rules:
+  #   - if: '$CI_COMMIT_TAG == null || $CI_COMMIT_TAG == ""'
   artifacts:
     paths:
       - ./dist/
