--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -89,7 +89,7 @@ publish to nexus:
     TWINE_PASSWORD: $TWINE_PASSWORD
   script:
     # check metadata requirements
-    - scripts/validate-metadata.sh
+    # - scripts/validate-metadata.sh
     - python3 -m pip install twine
     - twine upload --repository-url $PYPI_REPOSITORY_URL dist/*
   rules:
