--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,10 +92,11 @@ publish to nexus:
     # - scripts/validate-metadata.sh
     - python3 -m pip install twine
     - twine upload --repository-url $PYPI_REPOSITORY_URL dist/*
-  only:
-    variables:
-      - $CI_COMMIT_MESSAGE =~ /^.+$/ # Confirm tag message exists
-      - $CI_COMMIT_TAG =~ /^((([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)$/ # Confirm semantic versioning of tag
+  
+  # only:
+  # variables:
+  #   - $CI_COMMIT_MESSAGE =~ /^.+$/ # Confirm tag message exists
+  #   - $CI_COMMIT_TAG =~ /^((([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)$/ # Confirm semantic versioning of tag
   
 release docker image:
   stage: release
