--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,8 +92,10 @@ publish to nexus:
     # - scripts/validate-metadata.sh
     - python3 -m pip install twine
     - twine upload --repository-url $PYPI_REPOSITORY_URL dist/*
-  only:
-    - master
+  rules:
+    # PyPI package release only on tags, and confirm semantic versioning of tag
+    - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^((([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)$/'
+  
 
 release docker image:
   stage: release
