AT1-964 Release temp ska-tmc-common to CAR nexus

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,7 +95,7 @@ publish to nexus:
 
 release docker image:
   stage: release
-  image: artefact.skao.int/ska-tango-images-pytango-builder:9.3.10
+  image: $SKA_K8S_TOOLS_DEPLOY_IMAGE
   before_script:
   - docker login -u $CAR_OCI_REGISTRY_USERNAME -p $CAR_OCI_REGISTRY_PASSWORD $CAR_OCI_REGISTRY_HOST
   tags:
