--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,29 +30,29 @@ clean shell runner:
     # Gitlab CI badges creation
     - rm -rf build/*
 
-build wheel for publication: # Executed on a tag
-  stage: build
-  tags:
-    - docker-executor
-  script:
-    - python3 setup.py egg_info -b+$CI_COMMIT_SHORT_SHA sdist bdist_wheel
-  rules:
-    - if: '$CI_COMMIT_TAG'
-  artifacts:
-    paths:
-      - ./dist/
+# build wheel for publication: # Executed on a tag
+#   stage: build
+#   tags:
+#     - docker-executor
+#   script:
+#     - python3 setup.py egg_info -b+$CI_COMMIT_SHORT_SHA sdist bdist_wheel
+#   rules:
+#     - if: '$CI_COMMIT_TAG'
+#   artifacts:
+#     paths:
+#       - ./dist/
 
-build wheel for development: # Executed on non-tagged commit
-  stage: build
-  tags:
-    - docker-executor
-  script:
-    - python3 setup.py egg_info -b+dev.$CI_COMMIT_SHORT_SHA sdist bdist_wheel
-  # rules:
-  #   - if: '$CI_COMMIT_TAG == null || $CI_COMMIT_TAG == ""'
-  artifacts:
-    paths:
-      - ./dist/
+# build wheel for development: # Executed on non-tagged commit
+#   stage: build
+#   tags:
+#     - docker-executor
+#   script:
+#     - python3 setup.py egg_info -b+dev.$CI_COMMIT_SHORT_SHA sdist bdist_wheel
+#   # rules:
+#   #   - if: '$CI_COMMIT_TAG == null || $CI_COMMIT_TAG == ""'
+#   artifacts:
+#     paths:
+#       - ./dist/
 
 unit tests:
   stage: test
@@ -93,16 +93,16 @@ publish to nexus:
     - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^((([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)$/'
   
 
-release docker image:
-  stage: release
-  image: $SKA_K8S_TOOLS_DEPLOY_IMAGE
-  before_script:
-  - docker login -u $CAR_OCI_REGISTRY_USERNAME -p $CAR_OCI_REGISTRY_PASSWORD $CAR_OCI_REGISTRY_HOST
-  tags:
-    - docker-executor
-  script:
-    - make build
-    - make push
+# release docker image:
+#   stage: release
+#   image: $SKA_K8S_TOOLS_DEPLOY_IMAGE
+#   before_script:
+#   - docker login -u $CAR_OCI_REGISTRY_USERNAME -p $CAR_OCI_REGISTRY_PASSWORD $CAR_OCI_REGISTRY_HOST
+#   tags:
+#     - docker-executor
+#   script:
+#     - make build
+#     - make push
   # rules:
   #   # Images only allow manual run on tags, and confirm semantic versioning of tag
   #   - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^((([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)$/'
