AT1-964 Release docker image in ska-telescope folder

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,16 +93,16 @@ publish to nexus:
     - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^((([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)$/'
   
 
-# release docker image:
-#   stage: release
-#   image: $SKA_K8S_TOOLS_DEPLOY_IMAGE
-#   before_script:
-#   - docker login -u $CAR_OCI_REGISTRY_USERNAME -p $CAR_OCI_REGISTRY_PASSWORD $CAR_OCI_REGISTRY_HOST
-#   tags:
-#     - docker-executor
-#   script:
-#     - make build
-#     - make push
+release docker image:
+  stage: release
+  image: $SKA_K8S_TOOLS_DEPLOY_IMAGE
+  before_script:
+  - docker login -u $CAR_OCI_REGISTRY_USERNAME -p $CAR_OCI_REGISTRY_PASSWORD $CAR_OCI_REGISTRY_HOST
+  tags:
+    - docker-executor
+  script:
+    - make build
+    - make push
   # rules:
   #   # Images only allow manual run on tags, and confirm semantic versioning of tag
   #   - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^((([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)$/'
@@ -132,7 +132,7 @@ include:
   # https://developer.skao.int/en/latest/tools/software-package-release-procedure.html#building-and-publishing-python-packages
   - project: 'ska-telescope/templates-repository'
     file: 'gitlab-ci/includes/build_wheel.yml'
-  # Publish OCI images
-  # https://developer.skao.int/en/latest/tools/software-package-release-procedure.html#oci-image
-  - project: 'ska-telescope/templates-repository'
-    file: 'gitlab-ci/includes/build_push.yml'
+  # # Publish OCI images
+  # # https://developer.skao.int/en/latest/tools/software-package-release-procedure.html#oci-image
+  # - project: 'ska-telescope/templates-repository'
+  #   file: 'gitlab-ci/includes/build_push.yml'
