--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,9 +88,9 @@ publish to nexus:
     # - scripts/validate-metadata.sh
     - python3 -m pip install twine
     - twine upload --repository-url $CAR_PYPI_REPOSITORY_URL dist/*
-  rules:
-    # PyPI package release only on tags, and confirm semantic versioning of tag
-    - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^((([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)$/'
+  # rules:
+  #   # PyPI package release only on tags, and confirm semantic versioning of tag
+  #   - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^((([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)$/'
   
 
 release docker image:
@@ -103,11 +103,11 @@ release docker image:
   script:
     - make build
     - make push
-  # rules:
-  #   # Images only allow manual run on tags, and confirm semantic versioning of tag
-  #   - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^((([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)$/'
-  #     when: manual
-  #     allow_failure: true
+  rules:
+    # Images only allow manual run on tags, and confirm semantic versioning of tag
+    - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^((([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)$/'
+      when: manual
+      allow_failure: true
 
 pages:
   stage: pages
