--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,29 +30,29 @@ clean shell runner:
     # Gitlab CI badges creation
     - rm -rf build/*
 
-# build wheel for publication: # Executed on a tag
-#   stage: build
-#   tags:
-#     - docker-executor
-#   script:
-#     - python3 setup.py egg_info -b+$CI_COMMIT_SHORT_SHA sdist bdist_wheel
-#   rules:
-#     - if: '$CI_COMMIT_TAG'
-#   artifacts:
-#     paths:
-#       - ./dist/
+build wheel for publication: # Executed on a tag
+  stage: build
+  tags:
+    - docker-executor
+  script:
+    - python3 setup.py egg_info -b+$CI_COMMIT_SHORT_SHA sdist bdist_wheel
+  rules:
+    - if: '$CI_COMMIT_TAG'
+  artifacts:
+    paths:
+      - ./dist/
 
-# build wheel for development: # Executed on non-tagged commit
-#   stage: build
-#   tags:
-#     - docker-executor
-#   script:
-#     - python3 setup.py egg_info -b+dev.$CI_COMMIT_SHORT_SHA sdist bdist_wheel
-#   # rules:
-#   #   - if: '$CI_COMMIT_TAG == null || $CI_COMMIT_TAG == ""'
-#   artifacts:
-#     paths:
-#       - ./dist/
+build wheel for development: # Executed on non-tagged commit
+  stage: build
+  tags:
+    - docker-executor
+  script:
+    - python3 setup.py egg_info -b+dev.$CI_COMMIT_SHORT_SHA sdist bdist_wheel
+  # rules:
+  #   - if: '$CI_COMMIT_TAG == null || $CI_COMMIT_TAG == ""'
+  artifacts:
+    paths:
+      - ./dist/
 
 unit tests:
   stage: test
@@ -128,10 +128,10 @@ include:
   # https://developer.skatelescope.org/en/latest/tools/continuousintegration.html#automated-collection-of-ci-health-metrics-as-part-of-the-ci-pipeline
   - project: 'ska-telescope/templates-repository'
     file: 'gitlab-ci/includes/post_step.yml'
-  # Publish Python packages
-  # https://developer.skao.int/en/latest/tools/software-package-release-procedure.html#building-and-publishing-python-packages
-  - project: 'ska-telescope/templates-repository'
-    file: 'gitlab-ci/includes/build_wheel.yml'
+  # # Publish Python packages
+  # # https://developer.skao.int/en/latest/tools/software-package-release-procedure.html#building-and-publishing-python-packages
+  # - project: 'ska-telescope/templates-repository'
+  #   file: 'gitlab-ci/includes/build_wheel.yml'
   # # Publish OCI images
   # # https://developer.skao.int/en/latest/tools/software-package-release-procedure.html#oci-image
   # - project: 'ska-telescope/templates-repository'
