--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,30 +30,6 @@ clean shell runner:
     # Gitlab CI badges creation
     - rm -rf build/*
 
-build wheel for publication: # Executed on a tag
-  stage: build
-  tags:
-    - docker-executor
-  script:
-    - python3 setup.py egg_info -b+$CI_COMMIT_SHORT_SHA sdist bdist_wheel
-  rules:
-    - if: '$CI_COMMIT_TAG'
-  artifacts:
-    paths:
-      - ./dist/
-
-build wheel for development: # Executed on non-tagged commit
-  stage: build
-  tags:
-    - docker-executor
-  script:
-    - python3 setup.py egg_info -b+dev.$CI_COMMIT_SHORT_SHA sdist bdist_wheel
-  # rules:
-  #   - if: '$CI_COMMIT_TAG == null || $CI_COMMIT_TAG == ""'
-  artifacts:
-    paths:
-      - ./dist/
-
 unit tests:
   stage: test
   image: artefact.skao.int/ska-tango-images-pytango-builder:9.3.10
@@ -75,23 +51,6 @@ linting:
   artifacts:
     paths:
       - ./build
-
-publish to nexus:
-  stage: publish
-  tags:
-    - docker-executor
-  variables:
-    CAR_PYPI_USERNAME: $CAR_PYPI_USERNAME
-    CAR_PYPI_PASSWORD: $CAR_PYPI_PASSWORD
-  script:
-    # check metadata requirements
-    # - scripts/validate-metadata.sh
-    - python3 -m pip install twine
-    - twine upload --repository-url $CAR_PYPI_REPOSITORY_URL dist/*
-  # rules:
-  #   # PyPI package release only on tags, and confirm semantic versioning of tag
-  #   - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^((([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)$/'
-  
 
 release docker image:
   stage: release
@@ -128,11 +87,7 @@ include:
   # https://developer.skatelescope.org/en/latest/tools/continuousintegration.html#automated-collection-of-ci-health-metrics-as-part-of-the-ci-pipeline
   - project: 'ska-telescope/templates-repository'
     file: 'gitlab-ci/includes/post_step.yml'
-  # # Publish Python packages
-  # # https://developer.skao.int/en/latest/tools/software-package-release-procedure.html#building-and-publishing-python-packages
-  # - project: 'ska-telescope/templates-repository'
-  #   file: 'gitlab-ci/includes/build_wheel.yml'
-  # # Publish OCI images
-  # # https://developer.skao.int/en/latest/tools/software-package-release-procedure.html#oci-image
-  # - project: 'ska-telescope/templates-repository'
-  #   file: 'gitlab-ci/includes/build_push.yml'
+  # Publish Python packages
+  # https://developer.skao.int/en/latest/tools/software-package-release-procedure.html#building-and-publishing-python-packages
+  - project: 'ska-telescope/templates-repository'
+    file: 'gitlab-ci/includes/build_wheel.yml'
