--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-numpy == 1.17.2
-pytango >= 9.3.3
-jsonschema >= 3.2.0
-marshmallow
-fire
+# numpy == 1.17.2
+# pytango >= 9.3.3
+# jsonschema >= 3.2.0
+# marshmallow
+# fire
