--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,17 +32,17 @@ clean shell runner:
     # Gitlab CI badges creation
     - rm -rf build/*
 
-join_linting_reports:
-  stage: join-reports
-  tags:
-    - k8srunner
-  script:
-    - echo "This step is needed as the artifacts can't be passed in the same stage"
-    - make join-lint-reports
-  artifacts:
-    paths:
-      - build/
-    when: always
+# join_linting_reports:
+#   stage: join-reports
+#   tags:
+#     - k8srunner
+#   script:
+#     - echo "This step is needed as the artifacts can't be passed in the same stage"
+#     - make join-lint-reports
+#   artifacts:
+#     paths:
+#       - build/
+#     when: always
 
 unit tests:
   stage: test
@@ -105,7 +105,3 @@ include:
   # https://developer.skao.int/en/latest/tools/software-package-release-procedure.html#building-and-publishing-python-packages
   - project: 'ska-telescope/templates-repository'
     file: 'gitlab-ci/includes/build_wheel.yml'
-  # # Python packages build,lint, test and publish
-  - project: 'ska-telescope/templates-repository'
-    file: 'gitlab-ci/includes/python.gitlab-ci.yml'
-
