AT1-1027 - Upadate pipeline machinary in accordance with the standards

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,13 +16,9 @@ cache:
 
 stages:
   - lint
-  - join-reports
   - build
   - test
   - publish
-  - pages
-  - scan
-  - release
 
 clean shell runner:
   stage: .pre
@@ -32,17 +28,6 @@ clean shell runner:
     # Gitlab CI badges creation
     - rm -rf build/*
 
-# join_linting_reports:
-#   stage: join-reports
-#   tags:
-#     - k8srunner
-#   script:
-#     - echo "This step is needed as the artifacts can't be passed in the same stage"
-#     - make join-lint-reports
-#   artifacts:
-#     paths:
-#       - build/
-#     when: always
 
 unit tests:
   stage: test
@@ -66,42 +51,49 @@ lint:
     paths:
       - ./build
 
-release docker image:
-  stage: release
-  image: $SKA_K8S_TOOLS_DEPLOY_IMAGE
-  before_script:
-  - docker login -u $CAR_OCI_REGISTRY_USERNAME -p $CAR_OCI_REGISTRY_PASSWORD $CAR_OCI_REGISTRY_HOST
-  tags:
-    - docker-executor
-  script:
-    - make build
-    - make push
-  rules:
-    # Images only allow manual run on tags, and confirm semantic versioning of tag
-    - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^((([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)$/'
-      when: manual
-      allow_failure: true
+# release docker image:
+#   stage: release
+#   image: $SKA_K8S_TOOLS_DEPLOY_IMAGE
+#   before_script:
+#   - docker login -u $CAR_OCI_REGISTRY_USERNAME -p $CAR_OCI_REGISTRY_PASSWORD $CAR_OCI_REGISTRY_HOST
+#   tags:
+#     - docker-executor
+#   script:
+#     - make build
+#     - make push
+#   rules:
+#     # Images only allow manual run on tags, and confirm semantic versioning of tag
+#     - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^((([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)$/'
+#       when: manual
+#       allow_failure: true
 
-pages:
-  stage: pages
-  tags:
-    - docker-executor
-  script:
-    - mkdir .public
-    - cp -R build .public
-    - mv .public public
-  only:
-    - master
-  artifacts:
-    paths:
-      - public
+# pages:
+#   stage: pages
+#   tags:
+#     - docker-executor
+#   script:
+#     - mkdir .public
+#     - cp -R build .public
+#     - mv .public public
+#   only:
+#     - master
+#   artifacts:
+#     paths:
+#       - public
 
+#include:
+  # # Create Gitlab CI badges from CI metrics
+  # # https://developer.skatelescope.org/en/latest/tools/continuousintegration.html#automated-collection-of-ci-health-metrics-as-part-of-the-ci-pipeline
+  # - project: 'ska-telescope/templates-repository'
+  #   file: 'gitlab-ci/includes/post_step.yml'
+  # # Publish Python packages
+  # # https://developer.skao.int/en/latest/tools/software-package-release-procedure.html#building-and-publishing-python-packages
+  # - project: 'ska-telescope/templates-repository'
+  #   file: 'gitlab-ci/includes/build_wheel.yml'
 include:
-  # Create Gitlab CI badges from CI metrics
-  # https://developer.skatelescope.org/en/latest/tools/continuousintegration.html#automated-collection-of-ci-health-metrics-as-part-of-the-ci-pipeline
-  - project: 'ska-telescope/templates-repository'
-    file: 'gitlab-ci/includes/post_step.yml'
-  # Publish Python packages
-  # https://developer.skao.int/en/latest/tools/software-package-release-procedure.html#building-and-publishing-python-packages
-  - project: 'ska-telescope/templates-repository'
-    file: 'gitlab-ci/includes/build_wheel.yml'
+- project: 'ska-telescope/templates-repository'
+  file: 'gitlab-ci/includes/python.gitlab-ci.yml'
+- project: 'ska-telescope/templates-repository'
+  file: 'gitlab-ci/includes/docs.gitlab-ci.yml'
+- project: 'ska-telescope/templates-repository'
+  file: 'gitlab-ci/includes/finaliser.gitlab-ci.yml'
