--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,10 +15,12 @@ cache:
 # It is also specified that only the master branch will be subject of this job.
 
 stages:
+  - .pre
   - lint
   - build
   - test
   - publish
+  - .post
 
 clean shell runner:
   stage: .pre
