--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pytango = "9.3.3"
 jsonschema = "3.2.0"
 marshmallow = "^3.14.1"
 fire = "^0.4.0"
+black = "^21.12b0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
@@ -28,6 +29,9 @@ flake8-rst-docstrings = "^0.2.5"
 docstr-coverage = "^2.1.1"
 darglint = "^1.8.1"
 mock = "^4.0.3"
+isort = "^5.10.1"
+black = "^21.12b0"
+pylint-junit = "^0.3.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
