AT1-1027 - Remove lint and unit-test stages from pipeline. Comment setup.cfg file.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,57 +30,20 @@ clean shell runner:
     - rm -rf build/*
 
 
-unit tests:
-  stage: test
-  image: artefact.skao.int/ska-tango-images-pytango-builder:9.3.10
-  tags:
-    - docker-executor
-  script:
-    - make unit-test
-  artifacts:
-    paths:
-      - ./build
 
-lint:
-  stage: lint
-  image: artefact.skao.int/ska-tango-images-pytango-builder:9.3.10
-  tags:
-    - docker-executor
-  script:
-    - make lint
-  artifacts:
-    paths:
-      - ./build
-
-# release docker image:
-#   stage: release
-#   image: $SKA_K8S_TOOLS_DEPLOY_IMAGE
-#   before_script:
-#   - docker login -u $CAR_OCI_REGISTRY_USERNAME -p $CAR_OCI_REGISTRY_PASSWORD $CAR_OCI_REGISTRY_HOST
+# pages:
+#   stage: pages
 #   tags:
 #     - docker-executor
 #   script:
-#     - make build
-#     - make push
-#   rules:
-#     # Images only allow manual run on tags, and confirm semantic versioning of tag
-#     - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^((([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?)$/'
-#       when: manual
-#       allow_failure: true
-
-pages:
-  stage: pages
-  tags:
-    - docker-executor
-  script:
-    - mkdir .public
-    - cp -R build .public
-    - mv .public public
-  only:
-    - master
-  artifacts:
-    paths:
-      - public
+#     - mkdir .public
+#     - cp -R build .public
+#     - mv .public public
+#   only:
+#     - master
+#   artifacts:
+#     paths:
+#       - public
 
 #include:
   # # Create Gitlab CI badges from CI metrics
