--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,9 @@
 # In this case we use the latest python docker image to build and test this project.
 image: artefact.skao.int/ska-tango-images-pytango-builder:9.3.10
 
+variables:
+  GIT_SUBMODULE_STRATEGY: recursive
+
 # cache is used to specify a list of files and directories which should be cached between jobs. You can only use paths that are within the project workspace.
 # If cache is defined outside the scope of jobs, it means it is set globally and all jobs will use that definition
 cache:
