--- a/setup.cfg
+++ b/setup.cfg
@@ -1,26 +1,30 @@
-# [aliases]
-# test=pytest
+[darglint]
+ignore=DAR101, DAR201, DAR301, DAR401
 
-# [coverage:run]
-# branch = True
-# source = ska_tmc_common
-# data_file = common_coverage
+#[aliases]
+#test=pytest
 
-# [tool:pytest]
-# testpaths = tests
-# addopts = --forked
-#           --verbose
-#           --json-report
-#           --json-report-file=htmlcov/report.json
-#           --cov-branch
-#           --cov-report term
-#           --cov-report html
-#           --cov-report xml
-#           --cov=ska_tmc_common
-#           --junitxml=/build/reports/unit-tests.xml
-# console_output_style = progress
-# junit_family = legacy
+#[coverage:run]
+#branch = True
+#source = tmc.common
+#data_file = common_coverage
 
-# [metadata]
-# description-file = README.rst
+#[tool:pytest]
+#testpaths = tests
+#addopts = --forked
+#         --verbose
+#         --json-report
+#         --json-report-file=htmlcov/report.json
+#         --cov-branch
+#         --cov-report term
+#         --cov-report html
+#         --cov-report xml
+#         --cov=tmc.common
+#         --junitxml=/build/reports/unit-tests.xml
+#console_output_style = progress
+#junit_family = legacy
+
+#[metadata]
+#description-file = README.rst
+
 
