AT1-1027 - Update gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,9 @@ include:
 - project: 'ska-telescope/templates-repository'
   file: 'gitlab-ci/includes/docs.gitlab-ci.yml'
 
+- project: 'ska-telescope/templates-repository'
+  file: 'gitlab-ci/includes/raw.gitlab-ci.yml'
+
   # Create Gitlab CI badges from CI metrics
   # https://developer.skatelescope.org/en/latest/tools/continuousintegration.html#automated-collection-of-ci-health-metrics-as-part-of-the-ci-pipeline
 - project: 'ska-telescope/templates-repository'
