--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,8 @@ stages:
   - test
   - pages
   - publish
+  - scan
+  
 
 clean shell runner:
   stage: .pre
@@ -41,8 +43,9 @@ include:
 - project: 'ska-telescope/templates-repository'
   file: 'gitlab-ci/includes/docs.gitlab-ci.yml'
 
+  # # OCI images build and publish
 - project: 'ska-telescope/templates-repository'
-  file: 'gitlab-ci/includes/raw.gitlab-ci.yml'
+  file: 'gitlab-ci/includes/oci-image.gitlab-ci.yml'
 
   # Create Gitlab CI badges from CI metrics
   # https://developer.skatelescope.org/en/latest/tools/continuousintegration.html#automated-collection-of-ci-health-metrics-as-part-of-the-ci-pipeline
