--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,10 @@ description = "SKA TMC common contains common classes required for Telescope Mon
 authors = ["shraddhabajare"]
 license = "BSD-3-Clause"
 
+[[tool.poetry.source]]
+name = 'ska-nexus'
+url = 'https://artefact.skao.int/repository/pypi-internal/simple'
+
 [tool.poetry.dependencies]
 python = ">=3.6.2,<4.0"
 numpy = "1.17.2"
@@ -13,6 +17,8 @@ jsonschema = "3.2.0"
 marshmallow = "^3.14.1"
 fire = "^0.4.0"
 black = "^21.12b0"
+ska-ser-logging = "^0.4.1"
+ska-tango-base = "^0.11.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
