--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ url = 'https://artefact.skao.int/repository/pypi-internal/simple'
 python = ">=3.6.2,<4.0"
 numpy = "1.17.2"
 pytango = "9.3.3"
-jsonschema = "3.2.0"
+jsonschema = "^4.0.1"
 marshmallow = "^3.14.1"
 fire = "^0.4.0"
 black = "^21.12b0"
@@ -22,9 +22,9 @@ ska-tango-base = "^0.11.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
-pytest-cov = "pytest-json-report"
-pytest-mock = "pytest-xdist"
-pytest-xdist = "1.34.0"
+pytest-cov = "^2.10.1"
+pytest-mock = "^3.6.1"
+pytest-xdist = "^2.4.0"
 coverage = "^6.2"
 pylint = "^2.12.2"
 pylint2junit = "^1.0.1"
