--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ name = 'ska-nexus'
 url = 'https://artefact.skao.int/repository/pypi-internal/simple'
 
 [tool.poetry.dependencies]
-python = ">=3.6.2,<4.0"
+python = "^3.7"
 numpy = "1.17.2"
 pytango = "9.3.3"
 jsonschema = "^4.0.1"
