--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "ska-tmc-common"
-version = "0.1.12"
+version = "0.1.13"
 description = "SKA TMC common contains common classes required for Telescope Monitoring and Control(TMC)."
-authors = ["shraddhabajare"]
+authors = ["shraddhabajare", "adityadangeska"]
 license = "BSD-3-Clause"
 
 [[tool.poetry.source]]
