--- a/.pylintrc
+++ b/.pylintrc
@@ -63,7 +63,7 @@ confidence=
 disable=C,
         R,
         W,
-        I
+        I, no-value-for-parameter
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
