--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ jsonschema = "^4.0.1"
 marshmallow = "^3.14.1"
 fire = "^0.4.0"
 ska-ser-logging = "^0.4.1"
-ska-tango-base = "0.13.0"
+ska-tango-base = "^0.11.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
