SAH-1142 - Resolve disable pylint warnings

--- a/.pylintrc
+++ b/.pylintrc
@@ -63,7 +63,7 @@ confidence=
 disable=C,
         R,
         W,
-        I, no-member, redundant-keyword-arg, no-value-for-parameter
+        I, no-member
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
