--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
-.release[tool.poetry]
+[tool.poetry]
 name = "ska-tmc-common"
 version = "0.1.40"
 description = "SKA TMC common contains common classes required for Telescope Monitoring and Control(TMC)."
