--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,13 @@
 # In this case we use the latest python docker image to build and test this project.
 image: artefact.skao.int/ska-tango-images-pytango-builder:9.3.10
 
+# Pinning versions for faster pipeline runs
+python-test:
+  image: artefact.skao.int/ska-tango-images-pytango-builder:9.3.32
+
+python-lint:
+  image: artefact.skao.int/ska-tango-images-pytango-builder:9.3.32
+
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
 
@@ -24,8 +31,8 @@ stages:
   - pages
   - publish
   - scan
-  
-  
+
+
 include:
   # # Python packages build,lint, test and publish
 - project: 'ska-telescope/templates-repository'
