--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,9 +30,6 @@ ska-tango-testing = "0.4.1"
 katpoint = "1.0a2"
 ska-telmodel = "1.4.0"
 mock = "^4.0.3"
-isort = "^5.10.1"
-flake8 = "^5.0.4"
-
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1"
@@ -49,6 +46,11 @@ docstr-coverage = "^2.1.1"
 darglint = "^1.8.1"
 pylint-junit = "^0.3.2"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^22.8.0"
+isort = "^5.10.1"
+flake8 = "^5.0.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
