--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,15 +23,13 @@ pytango = "9.3.3"
 jsonschema = "^4.0.1"
 marshmallow = "^3.14.1"
 fire = "^0.4.0"
+black = "^22.1.0"
 ska-ser-logging = "^0.4.1"
 ska-tango-base = "0.17.0"
 ska-tango-testing = "0.4.1"
 katpoint = "1.0a2"
 ska-telmodel = "1.5.0"
 mock = "^4.0.3"
-black = "^22.8.0"
-isort = "^5.10.1"
-flake8 = "^5.0.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1"
@@ -49,6 +47,10 @@ darglint = "^1.8.1"
 pylint-junit = "^0.3.2"
 
 
+[tool.poetry.group.dev.dependencies]
+black = "^22.8.0"
+isort = "^5.10.1"
+flake8 = "^5.0.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
