--- a/.pylintrc
+++ b/.pylintrc
@@ -60,8 +60,11 @@ confidence=
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use "--disable=all --enable=classes
 # --disable=W".
-disable=inconsistent-return-statements,
-        W,
+disable=inconsistent-return-statements, abstract-method,
+        attribute-defined-outside-init, broad-exception-raised,
+        broad-exception-caught,arguments-renamed,redefined-builtin,
+        redefined-outer-name,arguments-differ,unused-argument,keyword-arg-before-vararg,
+        protected-access,useless-parent-delegation,duplicate-code,
         C,
         I, no-member
 
