--- a/.pylintrc
+++ b/.pylintrc
@@ -60,13 +60,11 @@ confidence=
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use "--disable=all --enable=classes
 # --disable=W".
-disable=inconsistent-return-statements, abstract-method,
-        attribute-defined-outside-init, broad-exception-raised,
-        broad-exception-caught,arguments-renamed,redefined-builtin,
-        redefined-outer-name,arguments-differ,unused-argument,keyword-arg-before-vararg,
-        protected-access,useless-parent-delegation,duplicate-code,
-        C,
-        I, no-member
+disable=abstract-method,broad-exception-raised,broad-exception-caught,
+        arguments-renamed,redefined-builtin,
+        redefined-outer-name,arguments-differ,unused-argument,
+        protected-access,invalid-name,
+        no-member
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
@@ -177,12 +175,7 @@ function-naming-style=snake_case
 #function-rgx=
 
 # Good variable names which should always be accepted, separated by a comma.
-good-names=i,
-           j,
-           k,
-           ex,
-           Run,
-           _
+good-names=_
 
 # Include a hint for the correct naming format with invalid-name.
 include-naming-hint=no
@@ -241,7 +234,7 @@ ignore-docstrings=yes
 ignore-imports=no
 
 # Minimum lines number of a similarity.
-min-similarity-lines=4
+min-similarity-lines=20
 
 
 [MISCELLANEOUS]
