--- a/.pylintrc
+++ b/.pylintrc
@@ -64,7 +64,7 @@ disable=abstract-method,broad-exception-raised,broad-exception-caught,
         arguments-renamed,redefined-builtin,
         redefined-outer-name,arguments-differ,
         protected-access,invalid-name,
-        no-member
+        no-member,unused-argument
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
