--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,18 +14,15 @@ name = 'ska-nexus'
 url = 'https://artefact.skao.int/repository/pypi-internal/simple'
 
 [tool.poetry.dependencies]
-python = "^3.10"
-numpy = [
-    {version = "1.21.1", python = ">=3.7,<3.10"},
-    {version = "1.23.0", python = "3.10"}
-]
+python = "~3.10"
+numpy = "^1.23.0"
 pytango = "9.3.3"
 jsonschema = "^4.0.1"
 marshmallow = "^3.14.1"
 fire = "^0.4.0"
 black = "^23.3.0"
 ska-ser-logging = "^0.4.1"
-ska-tango-base = [{version = "0.18.1", python = ">=3.10,<3.11"}]
+ska-tango-base = "0.18.1"
 ska-tango-testing = "0.4.1"
 katpoint = "1.0a2"
 ska-telmodel = "1.5.0"
