--- a/.pylintrc
+++ b/.pylintrc
@@ -64,8 +64,8 @@ disable=abstract-method,broad-exception-raised,broad-exception-caught,
         arguments-renamed,redefined-builtin,
         redefined-outer-name,arguments-differ,
         protected-access,invalid-name,
-        no-member,unused-argument,
-        too-many-public-methods,
+        no-member,unused-argument
+
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
@@ -405,7 +405,7 @@ max-locals=15
 max-parents=7
 
 # Maximum number of public methods for a class (see R0904).
-max-public-methods=45
+max-public-methods=50
 
 # Maximum number of return / yield for function / method body.
 max-returns=14
