--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,3 +46,6 @@ include:
   # https://developer.skatelescope.org/en/latest/tools/continuousintegration.html#automated-collection-of-ci-health-metrics-as-part-of-the-ci-pipeline
 - project: 'ska-telescope/templates-repository'
   file: 'gitlab-ci/includes/finaliser.gitlab-ci.yml'
+
+python-test:
+  retry: 1
