HM-432: add base.mk in makefile

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,5 +48,5 @@ include:
 - project: 'ska-telescope/templates-repository'
   file: 'gitlab-ci/includes/finaliser.gitlab-ci.yml'
 
-# - project: 'ska-telescope/templates-repository'
-#   file: 'gitlab-ci/includes/release.gitlab-ci.yml'
+- project: 'ska-telescope/templates-repository'
+  file: 'gitlab-ci/includes/release.gitlab-ci.yml'
