--- a/.pylintrc
+++ b/.pylintrc
@@ -60,7 +60,7 @@ confidence=
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use "--disable=all --enable=classes
 # --disable=W".
-disable=abstract-method,broad-exception-raised,broad-exception-caught,
+disable=abstract-method,
         arguments-renamed,redefined-builtin,
         redefined-outer-name,arguments-differ,
         protected-access,invalid-name,
