--- a/.pylintrc
+++ b/.pylintrc
@@ -7,7 +7,7 @@ extension-pkg-whitelist=
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
-ignore=CVS
+ignore=CVS,tests
 
 # Add files or directories matching the regex patterns to the blacklist. The
 # regex matches against base names, not paths.
@@ -63,7 +63,7 @@ confidence=
 disable=abstract-method,
         arguments-renamed,redefined-builtin,
         redefined-outer-name,arguments-differ,
-        protected-access,invalid-name,
+        protected-access,
         no-member,
 
 # Enable the message, report, category or checker with the given id(s). You can
