--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ packages = [
 name = 'ska-nexus'
 url = 'https://artefact.skao.int/repository/pypi-internal/simple'
 
+[[tool.poetry.source]]
+name = "PyPI-public"
+url = 'https://pypi.org/simple'
+
 [tool.poetry.dependencies]
 python = "~3.10"
 numpy = "^1.23.0"
