--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ ska-tango-testing = "0.6.0"
 katpoint = "1.0a2"
 ska-telmodel = "1.15.1"
 mock = "^4.0.3"
+attrs = "^23.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3.1"
