--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,11 @@ sphinx-autodoc-typehints = "^1.19.3"
 sphinxcontrib-plantuml = "^0.22"
 typing_extensions  = "^4.3.0"
 sphinx-rtd-theme = "^1.2.2"
+attrs = "*"
+jsonschema = "*"
+jsonschema-specifications = "*"
+referencing = "*"
+rpds-py = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
