SAH-1545: Update telmodel version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,13 @@ ska-ser-logging = "^0.4.1"
 ska-tango-base = "0.19.1"
 ska-tango-testing = "0.6.0"
 katpoint = "1.0a2"
-ska-telmodel = "1.15.1"
+ska-telmodel = { git = "https://gitlab.com/ska-telescope/ska-telmodel.git", branch = "sah-1545" }
 mock = "^4.0.3"
+attrs = "^23.2.0"
+referencing = "^0.35.0"
+jsonschema-specifications = "^2023.12.1"
+rpds-py = "^0.18.0"
+
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3.1"
