--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ ska-ser-logging = "^0.4.1"
 ska-tango-base = "0.19.1"
 ska-tango-testing = "0.6.0"
 katpoint = "1.0a2"
-ska-telmodel = { git = "https://gitlab.com/ska-telescope/ska-telmodel.git", branch = "skb-355" }
+ska-telmodel = "1.18.1"
 mock = "^4.0.3"
 
 [tool.poetry.dev-dependencies]
