--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,10 @@ flake8-rst-docstrings = "^0.3.0"
 docstr-coverage = "^2.1.1"
 darglint = "^1.8.1"
 pylint-junit = "^0.3.2"
+attrs = "^23.2.0"
+referencing = "^0.35.0"
+jsonschema-specifications = "^2023.12.1"
+rpds-py = "^0.18.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
