--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,3 +42,16 @@ include:
 
 - project: 'ska-telescope/templates-repository'
   file: gitlab-ci/includes/release.gitlab-ci.yml
+
+- project: 'ska-telescope/templates-repository'
+  file: gitlab-ci/includes/k8s.yml
+
+# OCI images build and publish
+- project: 'ska-telescope/templates-repository'
+  file: 'gitlab-ci/includes/oci-image-build.gitlab-ci.yml'
+# OCI images build and publish
+- project: 'ska-telescope/templates-repository'
+  file: 'gitlab-ci/includes/oci-image-lint.gitlab-ci.yml'
+# k8s steps
+- project: 'ska-telescope/templates-repository'
+  file: 'gitlab-ci/includes/k8s.gitlab-ci.yml'
