--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,13 +18,16 @@ name = "PyPI-public"
 url = 'https://pypi.org/simple'
 
 [tool.poetry.dependencies]
-python = "~3.10"
-numpy = "^1.23.0"
+python = "^3.10"
+numpy = [
+    { version = ">=1.21.6", python = "3.10" },
+    { version = ">=1.23.2", python = "3.11" },
+    { version = ">=1.26.0", python = ">=3.12" },
+]
 pytango = "9.5.0"
-jsonschema = "^4.0.1"
+jsonschema = "^4.17.3"
 marshmallow = "^3.14.1"
 fire = "^0.5.0"
-black = "^23.3.0"
 ska-ser-logging = "^0.4.1"
 ska-tango-base = "1.0.0"
 ska-tango-testing = "0.6.0"
@@ -33,8 +36,8 @@ ska-telmodel = "^1.19.0"
 mock = "^4.0.3"
 
 [tool.poetry.dev-dependencies]
-pytest = "^7.3.1"
-pytest-cov = "^4.0.0"
+pytest = "^8.1.1"
+pytest-cov = "^5.0.0"
 pytest-mock = "^3.10.0"
 pytest-xdist = "^2.4.0"
 coverage = "^6.2"
@@ -52,15 +55,15 @@ jsonschema-specifications = "^2023.12.1"
 rpds-py = "^0.18.0"
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.3.0"
+black = "^24.2.0"
 isort = "^5.10.1"
-flake8 = "^5.0.4"
+flake8 = "^7.0.0"
 
 [tool.poetry.group.docs.dependencies]
 docutils = "^0.18.1"
-Sphinx = "^5.1.1"
-ska-ser-sphinx-theme = "^0.1.1"
-sphinx-autodoc-typehints = "^1.19.3"
+Sphinx = "^7.2.6"
+ska-ser-sphinx-theme = "^0.1.2"
+sphinx-autodoc-typehints = "^2.0.0"
 sphinxcontrib-plantuml = "^0.22"
 typing_extensions  = "^4.3.0"
 sphinx-rtd-theme = "^1.2.2"
