--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ referencing = "^0.35.0"
 jsonschema-specifications = "^2023.12.1"
 rpds-py = "^0.18.0"
 mypy_extensions = "^1.0.0"
+pathspec = "^0.12.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.2.0"
