HM-466:Update test

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -17,7 +17,7 @@ addopts =
           --verbose
 console_output_style = count
 markers =
-bdd_features_base_dir = tests/features
+
 
 
 [coverage:run]
@@ -26,8 +26,7 @@ branch = True
 source = src
 
 [coverage:paths]
-source =
-    src
+source = src
 
 [coverage:report]
 show_missing = True
