--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ ska-tango-testing = "0.6.0"
 katpoint = "^1.0a2"
 ska-telmodel = "^1.19.0"
 mock = "^4.0.3"
+typing_extensions = "*"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.1.1"
