--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ ska-ser-logging = "^0.4.1"
 ska-tango-base = "1.0.0"
 ska-tango-testing = "0.6.0"
 katpoint = "^1.0a2"
-ska-telmodel = "^1.19.0"
+ska-telmodel = { git = "https://gitlab.com/ska-telescope/ska-telmodel.git", branch = "sah-1590" }
 mock = "^4.0.3"
 typing_extensions = "*"
 
