--- a/charts/ska-tmc-common/values.yaml
+++ b/charts/ska-tmc-common/values.yaml
@@ -35,7 +35,7 @@ test_device:
   image:
     registry: artefact.skao.int
     image: ska-tmc-common
-    tag: 0.20.0-dirty
+    tag: 0.20.1
     pullPolicy: IfNotPresent
 
 deviceServers:
