SAH-1591:Update pyprject.toml file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,12 @@ katpoint = "^1.0a2"
 ska-telmodel = { git = "https://gitlab.com/ska-telescope/ska-telmodel.git", branch = "sah-1590" }
 mock = "^4.0.3"
 typing_extensions = "*"
+attrs = "*"
+referencing = "^0.35.0"
+jsonschema-specifications = "^2023.12.1"
+rpds-py = "^0.18.0"
+mypy_extensions = "^1.0.0"
+pathspec = "^0.12.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.1.1"
@@ -50,7 +56,7 @@ flake8-rst-docstrings = "^0.3.0"
 docstr-coverage = "^2.1.1"
 darglint = "^1.8.1"
 pylint-junit = "^0.3.2"
-attrs = "^23.2.0"
+attrs = "*"
 referencing = "^0.35.0"
 jsonschema-specifications = "^2023.12.1"
 rpds-py = "^0.18.0"
