--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,10 +43,8 @@ include:
 
 # OCI images build and publish
 - project: 'ska-telescope/templates-repository'
-  file: 'gitlab-ci/includes/oci-image-build.gitlab-ci.yml'
-# OCI images build and publish
-- project: 'ska-telescope/templates-repository'
-  file: 'gitlab-ci/includes/oci-image-lint.gitlab-ci.yml'
+  file: 'gitlab-ci/includes/oci-image.gitlab-ci.yml
+
 # k8s steps
 - project: 'ska-telescope/templates-repository'
   file: 'gitlab-ci/includes/k8s.gitlab-ci.yml'
