HM-539: Fixed gitlab-ci yaml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,7 +43,7 @@ include:
 
 # OCI images build and publish
 - project: 'ska-telescope/templates-repository'
-  file: 'gitlab-ci/includes/oci-image.gitlab-ci.yml
+  file: 'gitlab-ci/includes/oci-image.gitlab-ci.yml'
 
 # k8s steps
 - project: 'ska-telescope/templates-repository'
