HM-539: Resolved review comments

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -11,7 +11,7 @@ log_file = pytest-logs.txt
 log_file_level = DEBUG
 console_output_style = count
 markers =
-
+    post_deployment: run only with a real deployment of the common repository
 
 
 [coverage:run]
