--- a/.pylintrc
+++ b/.pylintrc
@@ -61,7 +61,7 @@ confidence=
 # no Warning level messages displayed, use "--disable=all --enable=classes
 # --disable=W".
 disable=arguments-differ,
-        cyclic-import # the error is supressed because of false flagging of
+        cyclic-import, R0917 # the error is supressed because of false flagging of
       # cyclic imports due to usage of latest version of pylint
 
 # Enable the message, report, category or checker with the given id(s). You can
