SAH-1597: Update poetry file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,11 @@ katpoint = "^1.0a2"
 ska-telmodel = "^1.19.0"
 mock = "^4.0.3"
 typing_extensions = "*"
+attrs = "*"
+jsonschema-specifications = "*"
+referencing = "*"
+rpds-py = "*"
+ska-control-model="*"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.1.1"
@@ -50,7 +55,7 @@ flake8-rst-docstrings = "^0.3.0"
 docstr-coverage = "^2.1.1"
 darglint = "^1.8.1"
 pylint-junit = "^0.3.2"
-attrs = "^23.2.0"
+attrs = "*"
 referencing = "^0.35.0"
 jsonschema-specifications = "^2023.12.1"
 rpds-py = "^0.18.0"
