SAH-1597: Rever change

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,7 @@ flake8-rst-docstrings = "^0.3.0"
 docstr-coverage = "^2.1.1"
 darglint = "^1.8.1"
 pylint-junit = "^0.3.2"
-attrs = "*"
+attrs = "^23.2.0"
 referencing = "^0.35.0"
 jsonschema-specifications = "^2023.12.1"
 rpds-py = "^0.18.0"
