--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
 
+
 # cache is used to specify a list of files and directories which should be cached between jobs. You can only use paths that are within the project workspace.
 # If cache is defined outside the scope of jobs, it means it is set globally and all jobs will use that definition
 cache:
@@ -14,7 +15,6 @@ cache:
 # You can specify an unlimited number of jobs which are defined as top-level elements with an arbitrary name and always have to contain at least the script clause.
 # In this case we have only the test job which produce an artifacts (it must be placed into a directory called "public")
 # It is also specified that only the master branch will be subject of this job.
-
 stages:
   - lint
   - build
@@ -23,32 +23,35 @@ stages:
   - publish
   - scan
 
-
 include:
-  # # Python packages build,lint, test and publish
-- project: 'ska-telescope/templates-repository'
-  file: 'gitlab-ci/includes/python.gitlab-ci.yml'
+  # Python packages build, lint, test, and publish
+  - project: 'ska-telescope/templates-repository'
+    file: 'gitlab-ci/includes/python.gitlab-ci.yml'
 
-  # # Docs pages
-- project: 'ska-telescope/templates-repository'
-  file: 'gitlab-ci/includes/docs.gitlab-ci.yml'
+  # Documentation pages
+  - project: 'ska-telescope/templates-repository'
+    file: 'gitlab-ci/includes/docs.gitlab-ci.yml'
 
-  # Create Gitlab CI badges from CI metrics
-  # https://developer.skatelescope.org/en/latest/tools/continuousintegration.html#automated-collection-of-ci-health-metrics-as-part-of-the-ci-pipeline
-- project: 'ska-telescope/templates-repository'
-  file: 'gitlab-ci/includes/finaliser.gitlab-ci.yml'
+  # CI badges from CI metrics
+  - project: 'ska-telescope/templates-repository'
+    file: 'gitlab-ci/includes/finaliser.gitlab-ci.yml'
 
-- project: 'ska-telescope/templates-repository'
-  file: gitlab-ci/includes/release.gitlab-ci.yml
+  # Release-related steps
+  - project: 'ska-telescope/templates-repository'
+    file: 'gitlab-ci/includes/release.gitlab-ci.yml'
 
-# OCI images build and publish
-- project: 'ska-telescope/templates-repository'
-  file: 'gitlab-ci/includes/oci-image-build.gitlab-ci.yml'
-# OCI images build and publish
-- project: 'ska-telescope/templates-repository'
-  file: 'gitlab-ci/includes/oci-image-lint.gitlab-ci.yml'
+  # OCI image build and publish
+  - project: 'ska-telescope/templates-repository'
+    file: 'gitlab-ci/includes/oci-image-build.gitlab-ci.yml'
 
+  # OCI image lint
+  - project: 'ska-telescope/templates-repository'
+    file: 'gitlab-ci/includes/oci-image-lint.gitlab-ci.yml'
 
-# k8s steps
-- project: 'ska-telescope/templates-repository'
-  file: 'gitlab-ci/includes/k8s.gitlab-ci.yml'
+  # Kubernetes-related steps
+  - project: 'ska-telescope/templates-repository'
+    file: 'gitlab-ci/includes/k8s.gitlab-ci.yml'
+
+  # OCI image template
+  - project: 'ska-telescope/templates-repository'
+    file: 'gitlab-ci/includes/oci-image.gitlab-ci.yml'
