SAH-1672: Code cleanup and update release

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ska-tmc-common"
-version = "0.24.8"
+version = "0.25.0"
 description = "SKA TMC common contains common classes required for Telescope Monitoring and Control(TMC)."
 authors = ["Team Himalaya", "Team Sahyadri"]
 license = "BSD-3-Clause"
@@ -29,7 +29,7 @@ jsonschema = "^4.17.3"
 marshmallow = "^3.14.1"
 fire = "^0.5.0"
 ska-ser-logging = "^0.4.1"
-ska-tango-base = "1.2.0"
+ska-tango-base = "^1.2.0"
 ska-tango-testing = "0.6.1"
 katpoint = "^1.0a2"
 ska-telmodel = "^1.19.0"
