SAH-1672: Resolve review comments

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ jsonschema = "^4.17.3"
 marshmallow = "^3.14.1"
 fire = "^0.5.0"
 ska-ser-logging = "^0.4.1"
-ska-tango-base = "^1.2.0"
+ska-tango-base = "1.2.0"
 ska-tango-testing = "0.6.1"
 katpoint = "^1.0a2"
 ska-telmodel = "^1.19.0"
