HM-643:update test case

--- a/charts/ska-tmc-common/data/mock.yaml
+++ b/charts/ska-tmc-common/data/mock.yaml
@@ -1,7 +1,7 @@
 name: "mocks-{{.Release.Name}}"
 function: testing
 domain: test_device
-instances: ["01"]
+instances: ["01","02"]
 
 entrypoints:
   - name: "ska_tmc_common.test_helpers.helper_subarray_device.HelperSubArrayDevice"
