HM-647: update the fire

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ numpy = [
 pytango = "9.5.0"
 jsonschema = "^4.17.3"
 marshmallow = "^3.14.1"
-fire = "^0.6.0"
+fire = ">=0.5.0,<0.6.0"
 ska-ser-logging = "^0.4.1"
 ska-tango-base = "1.2.0"
 ska-tango-testing = "0.6.1"
